Removed Scroll animation
Removed Scroll animation and fixed disappearning off screen

--- a/about.html
+++ b/about.html
@@ -6,8 +6,6 @@
     <link rel="stylesheet" href="../static/aboutme.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;1,200;1,600&display=swap" rel="stylesheet">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
     <script src="static/particles.js"></script>
     <script src="../static/app.js"></script>
@@ -15,21 +13,13 @@
 <body>
     <!---About Me-->
     <section>
-        <div class="card" data-aos="fade-right"
-            data-aos-duration="3000"
-            data-aos-offset="500"
-            data-aos-easing="ease-in-out"
-            data-aos-delay="50">
+        <div class="card">
             <h1>What is TumorCast?</h1>
             <p>Tumor cast is an application that allows images of Pulmonary Chest X-Ray's
                 to be used to detect if a patient <br>
                 has manifestations of tuberculosis using computer vision.</p>
         </div>
-        <div class="card card2" data-aos="fade-left"
-            data-aos-duration="3000"
-            data-aos-offset="500"
-            data-aos-easing="ease-in-out"
-            data-aos-delay="50">
+        <div class="card card2">
             <h1>What is Tuberculosis?</h1>
             <p>Tuberculosis is a contagious infection that usually
             attacks your lungs, and can also spread to other parts of your body.
@@ -40,16 +30,9 @@
 
     </section>
     <a href="/">
-            <button id="backButton" data-aos="fade-left"
-            data-aos-duration="3000"
-            data-aos-offset="500"
-            data-aos-easing="ease-in-out"
-            data-aos-delay="50">
+            <button id="backButton">
             &#8592;
         </button>
     </a>
-    <script>
-        AOS.init();
-    </script>
 </body>
 </html>
