--- a/index.html
+++ b/index.html
@@ -6,35 +6,16 @@
         <title>TumorCast</title>
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;1,200;1,600&display=swap" rel="stylesheet">
-        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
         <link rel="stylesheet" href="../static/style.css">
-        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
         <script src="../static/particles.js"></script>
         <script src="../static/app.js"></script>
     </head>
     <header>
-        <h1 class="title" data-aos="fade-up" 
-        data-aos-duration="3000"
-        data-aos-offset="500"
-        data-aos-easing="ease-in-out"
-        data-aos-delay="50">TumorCast</h1>
+        <h1 class="title">TumorCast</h1>
         <div>
-            <a href="predict.html"><button data-aos="fade-right"
-            data-aos-duration="3000"
-            data-aos-offset="500"
-            data-aos-easing="ease-in-out"
-            data-aos-delay="50">Get Started</button></a>
-            <a href="about.html"><button data-aos="fade-left"
-            data-aos-duration="3000"
-            data-aos-offset="500"
-            data-aos-easing="ease-in-out"
-            data-aos-delay="50"
-            >About</button></a>
+            <a href="predict.html"><button>Get Started</button></a>
+            <a href="about.html"><button>About</button></a>
         </div>
-
-        <script>
-            AOS.init();
-        </script>
     </header>
 </html>
