--- a/about.html
+++ b/about.html
@@ -13,13 +13,13 @@
 <body>
     <!---About Me-->
     <section>
-        <div class="card">
+        <div class="card fade-right">
             <h1>What is TumorCast?</h1>
             <p>Tumor cast is an application that allows images of Pulmonary Chest X-Ray's
                 to be used to detect if a patient <br>
                 has manifestations of tuberculosis using computer vision.</p>
         </div>
-        <div class="card card2">
+        <div class="card card2 fade-left">
             <h1>What is Tuberculosis?</h1>
             <p>Tuberculosis is a contagious infection that usually
             attacks your lungs, and can also spread to other parts of your body.
@@ -30,7 +30,7 @@
 
     </section>
     <a href="/">
-            <button id="backButton">
+            <button id="backButton" class="fade-left">
             &#8592;
         </button>
     </a>
