--- a/predict.html
+++ b/predict.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <section class="center">
-        <div class="predictSection">
+        <div class="predictSection fade-left">
             <h1 class="title">Choose Image</h1>
             <label for="file-field" class="custom-file-upload">
                 Custom Upload
@@ -27,7 +27,7 @@
     </section>
 
     <a href="/">
-        <button id="backButton">
+        <button id="backButton" class="fade-left">
          &#8592;
         </button>
     </a>
