--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <script src="../static/app.js"></script>
     </head>
     <header>
-        <h1 class="title">TumorCast</h1>
+        <h1 class="title fade-Up">TumorCast</h1>
         <div>
-            <a href="predict.html"><button>Get Started</button></a>
-            <a href="about.html"><button>About</button></a>
+            <a href="predict.html"><button class="fade-right">Get Started</button></a>
+            <a href="about.html"><button class="fade-left">About</button></a>
         </div>
     </header>
 </html>
