--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <title>About TumorCast</title>
     <link rel="stylesheet" href="../static/aboutme.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="icon" href="../static/icon.ico">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;1,200;1,600&display=swap" rel="stylesheet">
 
     <script src="static/particles.js"></script>
