--- a/predict.html
+++ b/predict.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Predict</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="icon" href="../static/icon.ico">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;1,200;1,600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../static/predictstyles.css">
     <script src="https://unpkg.com/@tensorflow/tfjs"></script>
